Small CSS changes

--- a/options.html
+++ b/options.html
@@ -24,23 +24,18 @@ limitations under the License.
   <script src="popup.js"></script>
   <style>
     body {
+      font-family: 'Lucida Grande', sans-serif;
       min-width: 357px;
       overflow-x: hidden;
     }
-    img {
-      margin: 5px;
-      border: 2px solid black;
-      vertical-align: middle;
-      width: 75px;
-      height: 75px;
+    div > a {
+      font-size: 13px;
     }
-    h1 { font-size: 20px }
     button.authorized { background: green }
   </style>
 </head>
 
 <body>
-  <h1>OAuth 2.0 Permissions</h1>
   <button id="github">
     Grant Github Access
   </button>
