--- a/popup.html
+++ b/popup.html
@@ -17,16 +17,19 @@
       border-top: 1px solid #f1f1f1;
       padding: 2px 2px 5px 2px;
     }
-    div > a {
+    .gist > a {
       color: #4183c4;
       font-size: 13px;
       font-weight: bold;
       text-decoration: none;
       margin-right: 5px;
-
     }
     span {
       color: #666666;
+      font-size: 12px;
+    }
+    #more > a {
+      color: #777;
       font-size: 12px;
     }
   </style>
